--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -8,7 +8,7 @@
 
     <body>
        <h1>Jaden Bryant's Portfolio</h1> 
-       <h2>I'm a Hardware/Game/Web Developer</h2>
+       <h2>I'm a Game/Hardware/Web Developer</h2>
        <hr/>
        <a href="./public/movie-ranking.html">MOVIE RANKING PROJECT</a>
        <br/>
@@ -24,12 +24,3 @@
     </body>
 </html>
 
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
